# 55b-obd-freematics-plus

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .yamllint  Makefile  README.md  build-platformio.sh  build.sh  define-device-uuid.py  define-git-revision.py  lint-c.sh  lint-shell.sh  lint-yaml.sh  pio-post-validate-env-vars.py  platformio.ini  pyproject.toml  requirements.txt  setup.cfg
.github/: issue_template.md
.github/workflows/: build.yml  lint.yml
ci/: build-platformio.sh  build_platformio  clang-lint
git-hooks/: pre-commit.sh
include/Debug/: Trace.h
include/FreematicsOnePlus/: PinAssignments.h
include/debug/: trace.h
include/freematics_one_plus/: pin_assignments.h
src/: main.cpp
test/freematics_one_plus/: test_led.cpp  test_led_builtin.cpp
